--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    background-color: white;
+    color: black;
+  }
+  
+  .dark-mode {
+    background-color: #212529;
+    color: white;
+  }
